# cicd_test

.github/workflows/: basic-ci.yaml
basic-ci/tests/: test_service.py
my-app/: pyproject.toml
my-app/tests/: test_main.py
